# octopus

./: .gitignore  BUILD_INSTRUCTIONS.md  CLAUDE.md  PYINSTALLER_SETUP.md  README.md  USER_GUIDE.md  _skipped.face  build.bat  build.sh  pyproject.toml  radial_slicer.spec  requirements.txt
.github/workflows/: build-release.yml  test.yml
conic_slicer/: README.md  deform.py  main.py  merge.py  reform.py  requirements.txt
firmware/: FIRMWARE.CUR
firmware/System Volume Information/: IndexerVolumeGuid
firmware/sys/: board.txt  config-override.g  config.g  homeall.g  homeb.g  homec.g  homex.g  homey.g  homez.g  to4axis.g
generic_non_planar_slicer/: README.md  debug_pymeshfix_inspect.py  fix_intersections_and_test.py  main.py  pymeshfix_extract_and_test.py  pymeshlab_repair_and_test.py  remesh_poisson_and_test.py  repair_and_test_pymeshfix.py  requirements.txt  tetgen-tmpfile_skipped.face  tetgen-tmpfile_skipped.node  tri_intersect_remove_and_test.py  try_jitter_and_tetgen.py
gui/: .gitignore  CMakeLists.txt  main.cpp  resource.qrc  version.h
gui/core/: appconfig.cpp  appconfig.h  model3d.cpp  model3d.h  profilemanager.cpp  profilemanager.h  sliceparameters.h  slicerrunner.cpp  slicerrunner.h
gui/core/managers/: appconfig.cpp  appconfig.h  profilemanager.cpp  profilemanager.h
gui/core/model3d/: model3d.cpp  model3d.h
gui/core/profiles/: materialprofile.cpp  materialprofile.h  printerprofile.cpp  printerprofile.h  processprofile.cpp  processprofile.h
gui/core/profiles/viewdata/: printerviewdata.h
gui/core/slicing/: sliceparameters.cpp  sliceparameters.h  slicerrunner.cpp  slicerrunner.h
gui/json/: cylinderOne.json  cylinderTwo.json
gui/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
gui/slicerbundle/: example_config.json
gui/slicerbundle/config/: config_loader.py  defaults.py  prusa_config_generator.py
gui/slicerbundle/prusa_slicer/: my_printer_config.ini
gui/tabs/monitor/: monitortab.cpp  monitortab.h  monitortab.ui
gui/tabs/prepare/: preparetab.cpp  preparetab.h  preparetab.ui
gui/tabs/prepare/QuickViewer/: QuickViewer.qml  quickviewer.cpp  quickviewer.h
gui/tabs/prepare/SettingsMenuWidget/: settingsmenuwidget.cpp  settingsmenuwidget.h  settingsmenuwidget.ui
gui/tabs/prepare/SettingsMenuWidget/printerProfileDialog/: printerprofiledialog.cpp  printerprofiledialog.h  printerprofiledialog.ui
gui/tabs/prepare/ViewerWidget/: viewerwidget.cpp  viewerwidget.h
gui/tabs/preview/: previewtab.cpp  previewtab.h  previewtab.ui
gui/widgets/dialogs/loadingdialog/: slicerloadingdialog.cpp  slicerloadingdialog.h  slicerloadingdialog.ui
gui/widgets/setupWizard/: setupwizard.cpp  setupwizard.h
gui/widgets/setupWizard/pages/profilepage/: profilepage.cpp  profilepage.h  profilepage.ui
gui/widgets/setupWizard/pages/prusaslicerpage/: prusaslicerpage.cpp  prusaslicerpage.h  prusaslicerpage.ui
gui/widgets/setupWizard/pages/pythonpage/: pythonpage.cpp  pythonpage.h  pythonpage.ui
gui/widgets/setupWizard/pages/welcomepage/: welcomepage.cpp  welcomepage.h  welcomepage.ui
hybrid_slicer/: README.md  analyze.py  deform.py  main.py  prusa_slicer  reform.py  requirements.txt
native_slicer/: README.md  main.py  requirements.txt
native_slicer/cxzb_slicer/: __init__.py
native_slicer/cxzb_slicer/core/: __init__.py  (+2 more)
native_slicer/examples/: slice_conic.py  slice_cube.py  slice_sphere.py
native_slicer/tests/: conftest.py  test_extrusion.py  test_gcode.py  test_kinematics.py  test_layers.py  test_sdf.py  test_toolpath.py  test_vector_field.py
radial_non_planar_slicer/: PACKAGING.md  README.md  better_visualizer.py  build.sh  build_exe.bat  deform.py  main.py  my_printer_config.ini  other_visualizer.py  prusa_slice_test  radial_slicer.spec  reform.py  requirements.txt  utils.py  visualize_gcode.py
radial_non_planar_slicer/cura/: cura_engine_wrapper.py  cura_mapping.py  research_extruder.def.json  research_printer.def.json  test_call_cura_engine.py
tests/: test_smoke.py
tools/: better_visualizer.py  inspect_gcode.py  render_gcode.py
(+39 files in other folders)
